--- a/Implementations.org
+++ b/Implementations.org
@@ -1163,6 +1163,148 @@ This module exports =insertion_sort= and =insertion_sort_descending=.
 
 #+RESULTS[ba220b33f2ebf16ce1e74e14608023809130da5e]:
 
+** lower_bound
+*** whole module of the lower_bound
+This is whole module of the `lower_bound`.
+There are several types for `lower_bound`.
+#+name: lower_bound-module
+#+begin_src fortran :exports code :tangle "src/lower_bound_m.f90" :comment link :noweb no-export
+  module lower_bound_m
+    use, intrinsic :: iso_fortran_env
+    implicit none
+    private
+    <<declaration-lower_bound-var(type="integer", type_kind="int8")>>
+    <<declaration-lower_bound-var(type="integer", type_kind="int16")>>
+    <<declaration-lower_bound-var(type="integer", type_kind="int32")>>
+    <<declaration-lower_bound-var(type="real", type_kind="real32")>>
+    <<declaration-lower_bound-var(type="real", type_kind="real64")>>
+    public :: lower_bound
+  contains
+    <<procedures-lower_bound-var(type="integer", type_kind="int8")>>
+    <<procedures-lower_bound-var(type="integer", type_kind="int16")>>
+    <<procedures-lower_bound-var(type="integer", type_kind="int32")>>
+    <<procedures-lower_bound-var(type="integer", type_kind="int64")>>
+    <<procedures-lower_bound-var(type="real", type_kind="real32")>>
+    <<procedures-lower_bound-var(type="real", type_kind="real64")>>
+  end module lower_bound_m
+#+end_src
+*** declaration of the lower_bound
+#+name: declaration-lower_bound
+#+begin_src fortran :exports code
+    interface lower_bound
+       module procedure :: lower_bound_${suffix}
+    end interface lower_bound
+#+end_src
+*** procedures of the lower_bound
+=function lower_bound= searches the index that has the element that is higher than or equal to the `val`.
+Index starts from 1.
+#+name: procedures-lower_bound
+#+begin_src fortran :exports code
+  !> lower_bound_${suffix}: Search
+  pure integer(int32) function lower_bound_${suffix}(arr, val)
+    ${type}, intent(in) :: arr(:)
+    ${type}, intent(in) :: val
+    integer(int32) :: p, q, r
+    p = 1
+    r = size(arr)
+    if (arr(r) < val) then
+       lower_bound_${suffix} = r + 1
+       return
+    end if
+    do
+       q = (p+r)/2
+       if (p + 1 > r) exit
+       if (arr(q) >= val) then
+          r = q
+       else
+          p = q+1
+       end if
+    end do
+    lower_bound_${suffix} = q
+  end function lower_bound_${suffix}
+#+end_src
+*** process definition and procedures of the lower_bound
+#+name: declaration-lower_bound-var
+#+begin_src bash :exports code :var type="integer" type_kind="int32" :results output :noweb no-export :cache no :shebang #!/bin/bash
+  case "${type}" in
+      "character")
+          type="character"
+          suffix="character"
+          ;;
+      ,*)
+          type="${type}(${type_kind})"
+          suffix="${type_kind}"
+          ;;
+  esac
+  cat <<EOF
+  <<declaration-lower_bound>>
+  EOF
+#+end_src
+#+name: procedures-lower_bound-var
+#+begin_src bash :exports code :var type="integer" type_kind="int32" :results output :noweb no-export :cache no :shebang #!/bin/bash
+  case "${type}" in
+      "character")
+          type="character"
+          suffix="character"
+          ;;
+      ,*)
+          type="${type}(${type_kind})"
+          suffix="${type_kind}"
+          ;;
+  esac
+  cat <<EOF
+  <<procedures-lower_bound>>
+  EOF
+#+end_src
+*** test
+- Test the array that has several values.
+- Test the array that has only one value.
+- Test the array that has some same values.
+- Test the array that has all same values.
+#+name: lower_bound-test
+#+begin_src fortran :exports code :tangle "test/test_lower_bound.F90" :noweb no-export
+  program test_lower_bound
+    use, intrinsic :: iso_fortran_env
+    use lower_bound_m
+    implicit none
+    integer(int32) :: i, j
+    integer(int32), parameter :: n = 10
+    integer(int32) :: arr(n), arr2(1), dup_arr(n), allsame_arr(n)
+    do i = 1, n
+       arr(i) = i
+    end do
+    ! arr
+    do i = 0, n+1
+       j = lower_bound(arr, i)
+       <<assert-false(cond="j == max(1, i)",code=11,message="`lower_bound` does not work well...")>>
+    end do
+    ! arr2
+    arr2(1) = 7
+    <<assert-false(cond="lower_bound(arr2, 6) == 1",code=12,message="`lower_bound` does not work well for one element array...")>>
+    <<assert-false(cond="lower_bound(arr2, 7) == 1",code=12,message="`lower_bound` does not work well for one element array...")>>
+    <<assert-false(cond="lower_bound(arr2, 8) == 2",code=12,message="`lower_bound` does not work well for one element array...")>>
+    ! dup_arr
+    dup_arr = [1, 1, 2, 3, 3, 3, 3, 5, 5, 5]
+    <<assert-false(cond="lower_bound(dup_arr, 0) == 1",code=13,message="`lower_bound` does not work well for the array that has same values...")>>
+    <<assert-false(cond="lower_bound(dup_arr, 2) == 3",code=13,message="`lower_bound` does not work well for the array that has same values...")>>
+    <<assert-false(cond="lower_bound(dup_arr, 3) == 4",code=13,message="`lower_bound` does not work well for the array that has same values...")>>
+    <<assert-false(cond="lower_bound(dup_arr, 5) == 8",code=13,message="`lower_bound` does not work well for the array that has same values...")>>
+    <<assert-false(cond="lower_bound(dup_arr, 7) == 11",code=13,message="`lower_bound` does not work well for the array that has same values...")>>
+    ! allsame_arr
+    allsame_arr = [(1, i = 1, n)]
+    <<assert-false(cond="lower_bound(allsame_arr, 0) == 1",code=13,message="`lower_bound` does not work well for the array that has all same values...")>>
+    <<assert-false(cond="lower_bound(allsame_arr, 1) == 1",code=13,message="`lower_bound` does not work well for the array that has all same values...")>>
+    <<assert-false(cond="lower_bound(allsame_arr, 2) == 11",code=13,message="`lower_bound` does not work well for the array that has all same values...")>>
+  end program test_lower_bound
+#+end_src
+#+name: test-vector
+#+begin_src fortran :flags "-cpp -g -fbacktrace" :exports both :results output :noweb no-export :cache yes
+<<lower_bound-module>>
+<<lower_bound-test>>
+#+end_src
+
+#+RESULTS[8bdad10991244b1976c0a57ff71ca710c49b40fc]: test-vector
+
 * math
 ** prime
 *** prime factorization
