--- a/Implementations.org
+++ b/Implementations.org
@@ -1709,7 +1709,267 @@ There are four procedures for the linked list.
 : F
 
 ** Vector (Variable array)
-*** whole module of the vector
+*** Unwrapped Vector
+**** whole module of the unwrapped_vector
+#+name: unwrapped_vector-module
+#+begin_src fortran :exports code :tangle "src/unwrapped_vector_m.F90" :comment link :noweb no-export
+  module unwrapped_vector_m
+    use, intrinsic :: iso_fortran_env
+    implicit none
+    private
+  <<declaration-unwrapped_vector-var(type="integer", type_kind="int32")>>
+  <<declaration-unwrapped_vector-var(type="integer", type_kind="int64")>>
+  <<declaration-unwrapped_vector-var(type="real", type_kind="real32")>>
+  <<declaration-unwrapped_vector-var(type="real", type_kind="real64")>>
+  <<declaration-unwrapped_vector-var(type="character")>>
+  contains
+  <<procedures-unwrapped_vector-var(type="integer", type_kind="int32")>>
+  <<procedures-unwrapped_vector-var(type="integer", type_kind="int64")>>
+  <<procedures-unwrapped_vector-var(type="real", type_kind="real32")>>
+  <<procedures-unwrapped_vector-var(type="real", type_kind="real64")>>
+  <<procedures-unwrapped_vector-var(type="character")>>
+  end module unwrapped_vector_m
+#+end_src
+**** declaration of the unwrapped_vector
+First, We define the type of the unwrapped_vector.
+These unwrapped_vectors are implemented by the array that shrink and expand.
+The list can add new values, delete, and search some elements.
+
+Variables like ${variable} are expanded by bash.
+- ${type} is type of elements in the list.
+#+name: declaration-unwrapped_vector
+#+begin_src fortran :exports code
+  public :: ${uwvec}
+  type :: ${uwvec}
+     private
+     ${type}, allocatable, public :: arr_(:)
+     integer(int32) :: size_ = 0, capa_ = 0
+   contains
+     procedure, pass :: init      => init_${uwvec}
+     procedure, pass :: push_back_${uwvec}, push_back_array_${uwvec}
+     generic         :: push_back => push_back_${uwvec}, push_back_array_${uwvec}
+     procedure, pass :: pop_back  => pop_back_${uwvec}
+     procedure, pass :: size      => size_${uwvec}
+     procedure, pass :: resize    => resize_${uwvec}
+     procedure, pass :: lower_bound => lower_bound_${uwvec}
+  end type ${uwvec}
+#+end_src
+**** procedures of the unwrapped vector
+:PROPERTIES:
+:header-args: :noweb-ref procedures-unwrapped_vector
+:END:
+***** init
+=subroutine init= initialize unwrapped_vector by size.
+#+name: init-unwrapped_vector
+#+begin_src fortran :exports code :noweb no-export
+  !> init_${uwvec}: Initialize the ${uwvec} by size.
+  subroutine init_${uwvec}(this, n)
+    class(${uwvec}), intent(inout) :: this
+    integer(int32), intent(in) :: n
+    if (.not. allocated(this%arr_)) then
+       allocate(this%arr_(n))
+       this%size_ = 0 !n
+       this%capa_ = n
+  #ifdef DEBUG
+    else
+       <<error-handling-filename>>
+       <<error-handling-error_message-exit(err_num=1,string="Vector is already allocated...")>>
+  #endif
+    end if
+  end subroutine init_${uwvec}
+#+end_src
+***** push_back
+=subroutine push_back= insert value to the tail of elements of the unwrapped vector.
+#+name: push_back-unwrapped_vector
+#+begin_src fortran :exports code
+  !> push_back_${uwvec}: Insert value to the tail of elements of the ${uwvec}.
+  subroutine push_back_${uwvec}(this, val)
+    class(${uwvec}), intent(inout) :: this
+    ${type}, intent(in) :: val
+    if (.not. allocated(this%arr_)) call this%init(1)
+    if (this%size_ == this%capa_) then
+       call this%resize(2*this%capa_)
+    end if
+    this%size_ = this%size_ + 1
+    this%arr_(this%size_) = val
+  end subroutine push_back_${uwvec}
+  !> push_back_array_${uwvec}: Insert elemeents of array to the tail of elements of the ${uwvec}.
+  subroutine push_back_array_${uwvec}(this, arr)
+    class(${uwvec}), intent(inout) :: this
+    ${type}, intent(in) :: arr(:)
+    integer(int32) :: s
+    s = size(arr)
+    if (.not. allocated(this%arr_)) call this%init(s)
+    if (this%size_ + s > this%capa_) then
+       call this%resize(this%size_ + s)
+    end if
+    this%arr_(this%size_+1:this%size_+s) = arr(:)
+    this%size_ = this%size_ + s
+  end subroutine push_back_array_${uwvec}
+#+end_src
+***** pop_back
+=function pop_back= deletes the value in the end of arr_(:) of the unwrapped vector and returns it.
+#+name: pop_back-unwrapped_vector
+#+begin_src fortran :exports code :noweb no-export
+  !> pop_back_${uwvec}: Delete the value in the end of arr_(:) of the ${uwvec} and return it.
+  ${type} function pop_back_${uwvec}(this, ierr)
+    class(${uwvec}), intent(inout) :: this
+    integer(int32), intent(out), optional :: ierr
+    if (this%size_ == 0) then
+       <<error-handling-return-ierr(ierr=1)>>
+       <<error-handling-filename>>
+       <<error-handling-error_message-exit(err_num=3,string="There are no elements that can pop_back.">>
+    end if
+    pop_back_${uwvec} = this%arr_(this%size_)
+    this%size_ = this%size_ - 1
+    if (present(ierr)) ierr = 0
+  end function pop_back_${uwvec}
+#+end_src
+***** size
+=function size= return current size of the unwrapped vector.
+#+name: size-unwrapped_vector
+#+begin_src fortran :exports code
+  !> size_vector_${suffix}: Return current size of the ${uwvec}.
+  pure integer(int32) function size_${uwvec}(this)
+    class(${uwvec}), intent(in) :: this
+    size_${uwvec} = this%size_
+  end function size_${uwvec}
+#+end_src
+***** resize
+=subroutine resize= shrinks or expands arr_(:) of the unwrapped vector.
+#+name: resize-unwrapped_vector
+#+begin_src fortran :exports code :noweb no-export
+  !> resize_${uwvec}: Shrink or expand arr_(:) of the ${uwvec}.
+  subroutine resize_${uwvec}(this, resize)
+    class(${uwvec}), intent(inout) :: this
+    integer(int32), intent(in) :: resize
+    ${type}, allocatable :: tmp(:)
+    if (this%capa_ == resize) return
+    allocate(tmp(resize))
+    this%size_ = min(this%size_, resize)
+    tmp(1:this%size_) = this%arr_(1:this%size_)
+    call move_alloc(from = tmp, to = this%arr_)
+    this%capa_ = resize
+  end subroutine resize_${uwvec}
+#+end_src
+***** at
+=function at= return the element that locate at `i` of the unwrapped vector.
+#+name: at-unwrapped_vector
+#+begin_src fortran :exports code :noweb no-export
+  !> at_${uwvec}: Return the element that locate at `i` of the ${uwvec}.
+  ${type} function at_${uwvec}(this, i, ierr)
+    class(${uwvec}), intent(in) :: this
+    integer(int32), intent(in) :: i
+    integer(int32), intent(out), optional :: ierr
+  ! <<error-handling-vector-bounds-out>>
+    at_${uwvec} = this%arr_(i)
+    if (present(ierr)) ierr = 0
+  end function at_${uwvec}
+#+end_src
+***** lower_bound
+=function lower_bound= returns the minimum index that is higher than or equal to `val`.
+#+name: lower_bonud-unwrapped_vector
+#+begin_src fortran :exports code :noweb no-export
+  !> lower_bound_vector_${suffix}: Return the minimum index that is higher than or equal to `val`.
+  integer(int32) function lower_bound_${uwvec}(this, val)
+    class(${uwvec}), intent(in) :: this
+    ${type}, intent(in) :: val
+    integer(int32) :: p, q, r
+    p = 1
+    r = this%size_
+    if (this%arr_(r) < val) then
+       lower_bound_${uwvec} = r + 1
+       return
+    end if
+    do
+       q = (p+r)/2
+       if (p + 1 > r) exit
+       if (this%arr_(q) >= val) then
+          r = q
+       else
+          p = q+1
+       end if
+    end do
+    lower_bound_${uwvec} = q
+  end function lower_bound_${uwvec}
+#+end_src
+**** error-handling
+This handles the error about out-bounded index.
+#+name: error-handling-vector-bounds-out
+#+begin_src fortran :exports code :noweb no-export
+  if (i < this%lbound() .or. i > this%ubound()) then
+     <<error-handling-return-ierr(ierr="i - this%lbound()")>>
+  #ifdef DEBUG
+     <<error-handling-filename>>
+     write(error_unit, '(a, *(i0, a))')&
+          "Index ", i, " Out of bounds(", this%lbound(), ", ", this%ubound(), ")"
+     <<error-handling-exit(err_num=1)>>
+  #endif
+  end if
+#+end_src
+**** process definition and procedures of the vector
+#+name: unwrapped_vector-var
+#+begin_src bash :exports code :cache no :shebang #!/bin/bash
+  case "${type}" in
+      "character")
+          type="character"
+          suffix="character"
+          ;;
+      ,*)
+          type="${type}(${type_kind})"
+          suffix="${type_kind}"
+          ;;
+  esac
+  uwvec="unwrapped_vector_${suffix}"
+#+end_src
+#+name: declaration-unwrapped_vector-var
+#+begin_src bash :exports code :var type="integer" type_kind="int32" :results output :noweb no-export :cache no :shebang #!/bin/bash
+  <<unwrapped_vector-var>>
+  cat <<EOF
+  <<declaration-unwrapped_vector>>
+  EOF
+#+end_src
+#+name: procedures-unwrapped_vector-var
+#+begin_src bash :exports code :var type="integer" type_kind="int32" :results output :noweb no-export :cache no :shebang #!/bin/bash
+  <<unwrapped_vector-var>>
+  cat <<EOF
+  <<procedures-unwrapped_vector>>
+  EOF
+#+end_src
+**** test
+#+name: unwrapped_vector-test
+#+begin_src fortran :exports code :tangle "test/test_unwrapped_vector.F90" :noweb no-export
+  program test_unwrapped_vector
+    use, intrinsic :: iso_fortran_env
+    use unwrapped_vector_m
+    implicit none
+    integer(int32) :: i, j
+    integer(int32) :: ierr
+    integer(int32), parameter :: n = 10, low = 5, high = low+n-1
+    type(unwrapped_vector_int32) :: v, v2
+    store:do i = 1, n
+       call v%push_back(i)
+       <<assert-false(cond="v%arr_(i) == i", code=10, message="Stored value in `v%arr_(i)` is illegal in loop.")>>
+    end do store
+    test_lower_bound:do i = 0, v%size()+1
+       j = v%lower_bound(i)
+       <<assert-false(cond="j == max(1, i)", code=11, message="Return value of `lower_bound` is illegal in loop.")>>
+    end do test_lower_bound
+    do i = 1, n
+       j = v%pop_back()
+    end do
+    j = v%pop_back(ierr)
+    <<assert-true(cond="ierr == 0", code=15, message="Return value of `pop_back` is illegal.")>>
+  end program test_unwrapped_vector
+#+end_src
+#+name: test-unwrapped_vector
+#+begin_src fortran :flags "-nocpp -g -fbacktrace -fcheck=bounds" :exports both :results output :noweb no-export :cache yes
+<<unwrapped_vector-module>>
+<<unwrapped_vector-test>>
+#+end_src
+
+#+RESULTS[349e84b1adcf9f5a79a08caed23f1a9d3dff55ea]: test-unwrapped_vector
+
 #+name: vector-module
 #+begin_src fortran :exports code :tangle "src/vector_m.F90" :comment link :noweb no-export
   module vector_m
