--- a/Implementations.org
+++ b/Implementations.org
@@ -1734,9 +1734,11 @@ There are four procedures for the linked list.
 First, We define the type of the unwrapped_vector.
 These unwrapped_vectors are implemented by the array that shrink and expand.
 The list can add new values, delete, and search some elements.
+We can access the member ~arr_(:)~ directory, so we should take care of the consistency of data.
 
 Variables like ${variable} are expanded by bash.
-- ${type} is type of elements in the list.
+- ${uwvec} is the name of the type for the unwrapped vector .
+- ${type} is the type of the
 #+name: declaration-unwrapped_vector
 #+begin_src fortran :exports code
   public :: ${uwvec}
@@ -1749,15 +1751,49 @@ Variables like ${variable} are expanded by bash.
      procedure, pass :: push_back_${uwvec}, push_back_array_${uwvec}
      generic         :: push_back => push_back_${uwvec}, push_back_array_${uwvec}
      procedure, pass :: pop_back  => pop_back_${uwvec}
+     procedure, pass :: back      => back_${uwvec}
      procedure, pass :: size      => size_${uwvec}
      procedure, pass :: resize    => resize_${uwvec}
      procedure, pass :: lower_bound => lower_bound_${uwvec}
   end type ${uwvec}
+  interface ${uwvec}
+     module procedure :: construct_${uwvec}_by_size, &
+          construct_${uwvec}_by_arr, &
+          construct_${uwvec}_by_init_val
+  end interface ${uwvec}
 #+end_src
 **** procedures of the unwrapped vector
 :PROPERTIES:
 :header-args: :noweb-ref procedures-unwrapped_vector
 :END:
+***** constructor
+=function construct= constructs unwrapped_vector by size or value.
+#+name: construct-unwrapped_vector
+#+begin_src fortran
+  !> construct_${uwvec}_by_size: Construct ${uwvec} by the size, the initial values is unknown.
+  impure function construct_${uwvec}_by_size(size) result(res)
+    type(${uwvec}) :: res
+    integer(int32), intent(in) :: size
+    call res%init(size)
+  end function construct_${uwvec}_by_size
+  !> construct_${uwvec}_by_arr: Construct ${uwvec} by the array of ${type}.
+  impure function construct_${uwvec}_by_arr(arr) result(res)
+    type(${uwvec}) :: res
+    ${type}, intent(in) :: arr(:)
+    integer(int32) :: n
+    n = size(arr)
+    call res%init(n)
+    res%arr_(1:n) = arr(1:n)
+  end function construct_${uwvec}_by_arr
+  !> construct_${uwvec}_by_init_val: Construct ${uwvec} by size and the initial values.
+  impure function construct_${uwvec}_by_init_val(size, val) result(res)
+    type(${uwvec}) :: res
+    integer(int32), intent(in) :: size
+    ${type}, intent(in) :: val
+    call res%init(size)
+    res%arr_(1:size) = val
+  end function construct_${uwvec}_by_init_val
+#+end_src
 ***** init
 =subroutine init= initialize unwrapped_vector by size.
 #+name: init-unwrapped_vector
@@ -1768,13 +1804,8 @@ Variables like ${variable} are expanded by bash.
     integer(int32), intent(in) :: n
     if (.not. allocated(this%arr_)) then
        allocate(this%arr_(n))
-       this%size_ = 0 !n
+       this%size_ = n
        this%capa_ = n
-  #ifdef DEBUG
-    else
-       <<error-handling-filename>>
-       <<error-handling-error_message-exit(err_num=1,string="Vector is already allocated...")>>
-  #endif
     end if
   end subroutine init_${uwvec}
 #+end_src
@@ -1786,7 +1817,7 @@ Variables like ${variable} are expanded by bash.
   subroutine push_back_${uwvec}(this, val)
     class(${uwvec}), intent(inout) :: this
     ${type}, intent(in) :: val
-    if (.not. allocated(this%arr_)) call this%init(1)
+    if (.not. allocated(this%arr_)) call this%resize(0)
     if (this%size_ == this%capa_) then
        call this%resize(2*this%capa_)
     end if
@@ -1812,18 +1843,21 @@ Variables like ${variable} are expanded by bash.
 #+name: pop_back-unwrapped_vector
 #+begin_src fortran :exports code :noweb no-export
   !> pop_back_${uwvec}: Delete the value in the end of arr_(:) of the ${uwvec} and return it.
-  ${type} function pop_back_${uwvec}(this, ierr)
+  ${type} function pop_back_${uwvec}(this)
     class(${uwvec}), intent(inout) :: this
-    integer(int32), intent(out), optional :: ierr
-    if (this%size_ == 0) then
-       <<error-handling-return-ierr(ierr=1)>>
-       <<error-handling-filename>>
-       <<error-handling-error_message-exit(err_num=3,string="There are no elements that can pop_back.">>
-    end if
     pop_back_${uwvec} = this%arr_(this%size_)
     this%size_ = this%size_ - 1
-    if (present(ierr)) ierr = 0
   end function pop_back_${uwvec}
+#+end_src
+***** back
+=function back= returns the value in the end of arr_(:) of the unwrapped vector.
+#+name: back-unwrapped_vector
+#+begin_src fortran :exports code :noweb no-export
+  !> back_${uwvec}: Delete the value in the end of arr_(:) of the ${uwvec} and return it.
+  ${type} function back_${uwvec}(this)
+    class(${uwvec}), intent(inout) :: this
+    back_${uwvec} = this%arr_(this%size_)
+  end function back_${uwvec}
 #+end_src
 ***** size
 =function size= return current size of the unwrapped vector.
@@ -1844,27 +1878,20 @@ Variables like ${variable} are expanded by bash.
     class(${uwvec}), intent(inout) :: this
     integer(int32), intent(in) :: resize
     ${type}, allocatable :: tmp(:)
-    if (this%capa_ == resize) return
-    allocate(tmp(resize))
-    this%size_ = min(this%size_, resize)
-    tmp(1:this%size_) = this%arr_(1:this%size_)
-    call move_alloc(from = tmp, to = this%arr_)
-    this%capa_ = resize
+    if (resize < 1) then
+       this%size_ = 0
+       allocate(tmp(1))
+       call move_alloc(from = tmp, to = this%arr_)
+       this%capa_ = 1
+    else
+       if (this%capa_ == resize) return
+       allocate(tmp(resize))
+       this%size_ = min(this%size_, resize)
+       tmp(1:this%size_) = this%arr_(1:this%size_)
+       call move_alloc(from = tmp, to = this%arr_)
+       this%capa_ = resize
+    end if
   end subroutine resize_${uwvec}
-#+end_src
-***** at
-=function at= return the element that locate at `i` of the unwrapped vector.
-#+name: at-unwrapped_vector
-#+begin_src fortran :exports code :noweb no-export
-  !> at_${uwvec}: Return the element that locate at `i` of the ${uwvec}.
-  ${type} function at_${uwvec}(this, i, ierr)
-    class(${uwvec}), intent(in) :: this
-    integer(int32), intent(in) :: i
-    integer(int32), intent(out), optional :: ierr
-  ! <<error-handling-vector-bounds-out>>
-    at_${uwvec} = this%arr_(i)
-    if (present(ierr)) ierr = 0
-  end function at_${uwvec}
 #+end_src
 ***** lower_bound
 =function lower_bound= returns the minimum index that is higher than or equal to `val`.
@@ -1892,20 +1919,6 @@ Variables like ${variable} are expanded by bash.
     end do
     lower_bound_${uwvec} = q
   end function lower_bound_${uwvec}
-#+end_src
-**** error-handling
-This handles the error about out-bounded index.
-#+name: error-handling-vector-bounds-out
-#+begin_src fortran :exports code :noweb no-export
-  if (i < this%lbound() .or. i > this%ubound()) then
-     <<error-handling-return-ierr(ierr="i - this%lbound()")>>
-  #ifdef DEBUG
-     <<error-handling-filename>>
-     write(error_unit, '(a, *(i0, a))')&
-          "Index ", i, " Out of bounds(", this%lbound(), ", ", this%ubound(), ")"
-     <<error-handling-exit(err_num=1)>>
-  #endif
-  end if
 #+end_src
 **** process definition and procedures of the vector
 #+name: unwrapped_vector-var
@@ -1958,17 +1971,35 @@ This handles the error about out-bounded index.
     do i = 1, n
        j = v%pop_back()
     end do
-    j = v%pop_back(ierr)
-    <<assert-true(cond="ierr == 0", code=15, message="Return value of `pop_back` is illegal.")>>
+
+    v2 = unwrapped_vector_int32(5)
+    v2%arr_(:) = 1
+    do i = 1, 5
+       <<assert-false(cond="v2%arr_(i) == 1", code=20, message="Initialization by size of `v2` is illegal.")>>
+    end do
+    v2 = unwrapped_vector_int32([(i, i = 1,5)])
+    do i = 1, 5
+       <<assert-false(cond="v2%arr_(i) == i", code=21, message="Initialization by array of `v2` is illegal.")>>
+    end do
+    v2 = unwrapped_vector_int32(size = 5, val = 2)
+    do i = 1, 5
+       <<assert-false(cond="v2%arr_(i) == 2", code=22, message="Initialization by init_val of `v2` is illegal.")>>
+    end do
+
+    call v2%resize(0)
+    do i = 1, 5
+       call v2%push_back(i)
+       <<assert-false(cond="v2%back() == i", code=23, message="Resize or back for `v2` is illegal.")>>
+    end do
   end program test_unwrapped_vector
 #+end_src
 #+name: test-unwrapped_vector
-#+begin_src fortran :flags "-nocpp -g -fbacktrace -fcheck=bounds" :exports both :results output :noweb no-export :cache yes
+#+begin_src fortran :flags "-cpp -g -fbacktrace -fcheck=bounds" :exports both :results output :noweb no-export :cache yes
 <<unwrapped_vector-module>>
 <<unwrapped_vector-test>>
 #+end_src
 
-#+RESULTS[349e84b1adcf9f5a79a08caed23f1a9d3dff55ea]: test-unwrapped_vector
+#+RESULTS[1a980011ba9f528ddfd7da7d9e1eb46a59c550e3]: test-unwrapped_vector
 
 #+name: vector-module
 #+begin_src fortran :exports code :tangle "src/vector_m.F90" :comment link :noweb no-export
